# wuuurms

./: .gitignore  README.md
app/: .gitignore  pubspec.yaml
app/amplify/: team-provider-info.json
app/amplify/backend/: backend-config.json
app/amplify/backend/api/hex/: cli-inputs.json  parameters.json  schema.graphql
app/amplify/backend/auth/hex5dfb724f/: cli-inputs.json
app/amplify/backend/types/: amplify-dependent-resources-ref.d.ts
app/android/app/: build.gradle
app/lib/: app.dart  main.dart  routes.dart
app/lib/helpers/: enum_extension.dart  hero_popup_router.dart
app/lib/models/: BoardGame.dart  BudgetEntry.dart  ModelProvider.dart  user_login_state.dart
app/lib/screens/: boardgames.dart  budgets.dart  home.dart  manage_budget_entry.dart  profile.dart
app/lib/widgets/: appBar.dart  app_bar.dart
app/test/: widget_test.dart
app/v1/amplify/: team-provider-info.json
app/v1/amplify/.config/: project-config.json
app/v1/amplify/backend/api/hex/: cli-inputs.json
app/v1/amplify/backend/auth/hex5dfb724f/: cli-inputs.json
app/v1/lib/: app.dart  main.dart
app/v1/lib/models/: BoardGameType.dart  ModelProvider.dart  user_login_state.dart
app/v1/lib/screens/: boardgames.dart  budgets.dart
documentation/collaboration/: README.md
documentation/development_process/: README.md
documentation/development_process/v2/: README.md
infra/: .gitignore  README.md  package-lock.json  package.json
infra/lib/: backend-stack.ts  infra-stack.ts
infra/lib/graphql/: schema.graphql
infra/lib/graphql/echo/: index.js
infra/lib/graphql/resolvers/update_player_score/: pyproject.toml
infra/lib/graphql/resolvers/update_player_score/update_player_score/: main.py
infra/v1/: .gitignore  package-lock.json  tsconfig.json
infra/v1/lib/graphql/: schema.graphql
infra/v2/: app.py  cdk.json  pyproject.toml
infra/v2/stacks/: api_stack.py  databases_stack.py  v2_stack.py
infra/v2/stacks/api/: pyproject.toml
infra/v2/stacks/api/api/common_router/: models.py  responses.py
infra/v2/stacks/api/api/data_access/: ddb_client.py
infra/v2/stacks/api/api/entities/board_game/: logic.py  models.py  router.py
infra/v2/stacks/api/api/entities/player/: logic.py  router.py
infra/v2/stacks/api/api/entities/team/: logic.py  models.py  router.py
infra/v2/stacks/api/api/entities/user/: logic.py  models.py  router.py
infra/v2/stacks/api/api/exceptions/: __init__.py
infra/v2/stacks/api/api/handlers/: main.py
infra/v2/stacks/api/api/logic/: board_game.py  player.py  team.py  user.py
infra/v2/stacks/api/api/models/: board_game.py
infra/v2/stacks/api/api/observability/: __init__.py
infra/v2/stacks/api/api/settings/: __init__.py
infra/v2/stacks/api/api/utils/: models.py
infra/v2/stacks/api/api_old/data_access/: ddb_client.py
infra/v2/stacks/api/api_old/handlers/: main.py
infra/v2/stacks/api/api_old/logic/: board_game.py  player.py  team.py  user.py
infra/v2/stacks/api/api_old/models/: player.py  user.py
infra/v2/tests/unit/: test_v2_stack.py
