[tool.poetry]
name = "update-player-score"
version = "0.1.0"
description = ""
authors = ["JelsB <boulangier.jels@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
