[tool.poetry]
name = "update-player-score"
version = "0.1.0"
description = ""
authors = ["JelsB <boulangier.jels@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
aws-lambda-powertools = {extras = ["aws-all"], version = "^2.33.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
