[tool.poetry]
name = "update-player-score"
version = "0.1.0"
description = ""
authors = ["JelsB <boulangier.jels@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
aws-lambda-powertools = {extras = ["aws-all"], version = "^2.33.1"}
ruff = "^0.2.1"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4

# Assume Python 3.12
target-version = "py312"

[tool.ruff.lint]

[tool.ruff.format]
quote-style = "single"

[tool.mypy]
python_version = "3.12"

